--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,16 @@ charset-normalizer==3.4.2
 click==8.2.1
 cryptography==45.0.5
 cyclopts==3.22.2
+dataclasses==0.6
+distlib==0.3.9
 dnspython==2.7.0
 docstring_parser==0.16
 docutils==0.21.2
 email_validator==2.2.0
 exceptiongroup==1.3.0
+fast-flights==2.2
 fastmcp==2.10.5
+filelock==3.18.0
 googleapis-common-protos==1.70.0
 grpcio==1.73.1
 grpcio-tools==1.73.1
@@ -30,8 +34,11 @@ mcp==1.11.0
 mdurl==0.1.2
 openapi-pydantic==0.5.1
 packaging==25.0
+platformdirs==4.3.8
 pluggy==1.6.0
+primp==0.15.0
 protobuf==6.31.1
+protobuf_to_pydantic==0.3.3.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
@@ -47,6 +54,7 @@ requests==2.32.4
 rich==14.0.0
 rich-rst==1.3.1
 rpds-py==0.26.0
+selectolax==0.3.29
 setuptools==80.9.0
 sniffio==1.3.1
 sse-starlette==2.4.1
@@ -55,3 +63,4 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+virtualenv==20.31.2
